# torsh

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  PYTHON_BINDINGS.md  README.md  ROADMAP.md  SCIRS2_INTEGRATION_POLICY.md  TODO.md  blueprint.md  debug_shapes.rs  pyproject.toml
crates/torsh-autograd/: Cargo.toml  NEW_MODULES_SUMMARY.md  README.md  TODO.md
crates/torsh-autograd/src/: ad_framework_compatibility.rs  anomaly_alerts.rs  anomaly_detection.rs  audit_logging.rs  auto_tuning.rs  autograd_traits.rs  automatic_error_recovery.rs  blas_integration.rs  buffer_optimization.rs  capacity_planning.rs  checkpoint_scheduler.rs  common_utils.rs  complex_ops.rs  compression.rs  context.rs  cross_framework_verification.rs  custom_backends.rs  differentiable_programming.rs  discrete_ops.rs  edge_case_handling.rs  error_diagnostics.rs  error_handling.rs  error_rate_monitoring.rs  examples.rs  exception_safety.rs  external_ad_integration.rs  flamegraph.rs  flamegraph_generation.rs  function.rs  function_optimization.rs  garbage_collection.rs  global_adapter.rs  gpu_gradient.rs  graceful_degradation.rs  grad_mode.rs  gradient_checking.rs  gradient_clipping.rs  gradient_filtering.rs  gradient_flow_analysis.rs  gradient_hooks.rs  (+55 more)
crates/torsh-autograd/tests/: bernoulli_tests.rs
crates/torsh-backend/: BENCHMARKING.md  Cargo.toml  README.md  TODO.md  build.rs
crates/torsh-backend-cpu/: Cargo.toml  README.md  build.rs
crates/torsh-backend-cpu/src/: backend.rs  buffer.rs  device.rs  error.rs  kernel.rs  lib.rs  memory.rs  optimizations.rs  optimized_kernels.rs  profiler.rs  simd.rs
crates/torsh-backend-cuda/: Cargo.toml  README.md  build.rs
crates/torsh-backend-cuda/benches/: cuda_operations.rs
crates/torsh-backend-cuda/src/: backend.rs  buffer.rs  cudnn.rs  device.rs  error.rs  lib.rs  memory.rs  mixed_precision.rs  neural_ops_enhanced.rs  stream.rs
crates/torsh-backend/benches/: backend_benchmarks.rs.disabled  chunking_validation.rs  cpu_benchmarks.rs.disabled
crates/torsh-backend/proptest-regressions/: property_tests.txt
crates/torsh-backend/src/: adaptive_kernel_selection.rs  backend.rs  buffer.rs  convolution.rs  cross_backend_transfer.rs  cross_backend_validation.rs  deadlock_prevention.rs  device.rs  error.rs  fft.rs  hardware_optimization_tests.rs  introspection.rs  jit_compiler.rs  kernel.rs  kernel_generation.rs  lib.rs  memory.rs  memory_defrag.rs  performance_modeling.rs  profiler.rs  property_tests.rs  rnn.rs  rocm.rs  sparse_ops.rs  unified_memory_pool.rs  version_compat.rs  zero_copy.rs
crates/torsh-backend/tests/: comprehensive_integration_tests.rs  cuda_performance_integration_tests.rs  kernel_fusion_tests.rs  memory_optimization_tests.rs  property_based_tests.proptest-regressions  property_based_tests.rs  scirs2_integration_tests.rs  simple_integration_tests.rs
crates/torsh-backends/: Cargo.toml
crates/torsh-backends/src/: backend.rs  buffer.rs  device.rs  kernel.rs  lib.rs  memory.rs  profiler.rs
crates/torsh-benches/: ACTION_PLAN.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  TODO.md  build.rs  cleanup_warnings.rs  comparison_report.md  comparison_results.json  comprehensive_analysis.py  implementation_summary.md  run_validation.sh  simple_validation.rs  validate_benchmarks.rs  validate_fixes.py
crates/torsh-benches/benches/: advanced_systems.rs.disabled  dataset_ops.rs  diffusion_models.rs  ip_adapter.rs  neural_networks.rs  spectral_ops.rs  tensor_operations.rs
crates/torsh-benches/docs/: BENCHMARKING_GUIDE.md  INTERPRETATION_GUIDE.md  METHODOLOGY.md  OPTIMIZATION_TIPS.md  TROUBLESHOOTING.md
crates/torsh-benches/examples/: advanced_analysis_demo.rs.disabled  advanced_systems_demo.rs  benchmark_comparison_demo.rs  cached_benchmarks.rs  complete_workflow_demo.rs.disabled  comprehensive_benchmark_demo.rs.disabled  enhanced_analysis_demo.rs.disabled  pytorch_performance_suite.rs  run_all_benchmarks.rs.disabled  run_comparisons.rs  scirs2_showcase.rs.disabled  (+1 more)
crates/torsh-cli/: Cargo.toml  README.md  TODO.md
crates/torsh-cluster/: ALGORITHM_COMPARISON.md  Cargo.toml  README.md  TODO.md
crates/torsh-core/: API_DESIGN_RATIONALE.md  ARCHITECTURE.md  BREAKING_CHANGE_POLICY.md  Cargo.toml  DEPENDENCY_RATIONALE.md  NAMING_CONVENTIONS.md  PERFORMANCE.md  README.md  TODO.md
crates/torsh-data/: Cargo.toml  README.md  TODO.md
crates/torsh-distributed/: Cargo.toml  GRADIENT_SYNC.md  NCCL_BACKEND.md  README.md  TODO.md  sustainability_report.json
crates/torsh-ffi/: Cargo.toml  README.md  TODO.md  WASM_README.md  WEBGPU_README.md  build.rs  java.d  torsh-wasm.d.ts  webgpu.d.ts
crates/torsh-functional/: Cargo.toml  KNOWN_ISSUES.md  README.md  TODO.md
crates/torsh-fx/: Cargo.toml  README.md  TODO.md
crates/torsh-graph/: ADVANCED_FEATURES.md  Cargo.toml  README.md  SESSION_4_SUMMARY.md  TODO.md
crates/torsh-hub/: Cargo.toml  README.md  TODO.md
crates/torsh-jit/: Cargo.toml  README.md  TODO.md  debug_fusion_test.rs
crates/torsh-linalg/: BEST_PRACTICES.md  Cargo.toml  EXAMPLES.md  NUMERICAL_NOTES.md  OPERATIONS_GUIDE.md  PERFORMANCE.md  README.md  TODO.md
crates/torsh-metrics/: Cargo.toml  README.md  TODO.md
crates/torsh-models/: Cargo.toml  KNOWN_ISSUES.md  README.md  TODO.md  test_syntax.rs
crates/torsh-nn/: Cargo.toml  README.md  TODO.md
crates/torsh-optim/: Cargo.toml  README.md  TODO.md
crates/torsh-package/: Cargo.toml  DISTRIBUTION_GUIDE.md  MIGRATION_GUIDE.md  README.md  TODO.md
crates/torsh-profiler/: BEST_PRACTICES.md  Cargo.toml  README.md  RECENT_ENHANCEMENTS.md  TODO.md  TROUBLESHOOTING.md  USER_GUIDE.md  profile.json
crates/torsh-python/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  SECURITY.md  TODO.md  build.rs  pyproject.toml
crates/torsh-quantization/: CURRENT_STATUS.md  Cargo.toml  README.md  TODO.md
crates/torsh-series/: Cargo.toml  README.md  TODO.md
crates/torsh-signal/: Cargo.toml  README.md  TODO.md
(+2703 files in other folders)
