[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "torsh"
version = "0.1.0-rc.1"
description = "PyTorch-compatible deep learning framework built in Rust"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Team KitaSan", email = "info@kitasan.io"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["deep-learning", "machine-learning", "pytorch", "neural-networks", "rust"]
dependencies = [
    "numpy >= 1.19.0",
    "typing-extensions >= 4.0.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest >= 6.0",
    "pytest-benchmark",
    "black",
    "ruff",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]

[project.urls]
Homepage = "https://torsh.rs"
Repository = "https://github.com/cool-japan/torsh"
Documentation = "https://docs.torsh.rs"
"Bug Tracker" = "https://github.com/cool-japan/torsh/issues"

[tool.maturin]
python-source = "python"
module-name = "torsh._C"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true